// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should render a default paginator - Large 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator"
  >
    <button
      aria-disabled={true}
      aria-label="Terra.paginator.first"
      className="nav-link left-controls is-disabled"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={null}
      type="button"
    >
      Terra.paginator.first
    </button>
    <button
      aria-disabled={true}
      aria-label="Terra.paginator.previous"
      className="nav-link left-controls previous is-disabled"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={null}
      type="button"
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </button>
    <button
      aria-current="page"
      aria-label="Terra.paginator.pageIndex"
      className="nav-link is-selected"
      key="pageButton_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={null}
      type="button"
    >
      1
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      2
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      3
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      4
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_5"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      5
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_6"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      6
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_7"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      7
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_8"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      8
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_9"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      9
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_10"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      10
    </button>
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.next"
      className="nav-link right-controls next"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </button>
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.last"
      className="nav-link right-controls"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      Terra.paginator.last
    </button>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a default paginator - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator"
  >
    <button
      aria-disabled={true}
      aria-label="Terra.paginator.first"
      className="nav-link left-controls is-disabled"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={null}
      type="button"
    >
      Terra.paginator.first
    </button>
    <button
      aria-disabled={true}
      aria-label="Terra.paginator.previous"
      className="nav-link left-controls previous is-disabled"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={null}
      type="button"
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </button>
    <button
      aria-current="page"
      aria-label="Terra.paginator.pageIndex"
      className="nav-link is-selected"
      key="pageButton_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={null}
      type="button"
    >
      1
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      2
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      3
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      4
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_5"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      5
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_6"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      6
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_7"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      7
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_8"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      8
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_9"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      9
    </button>
    <button
      aria-current={false}
      aria-label="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_10"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      10
    </button>
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.next"
      className="nav-link right-controls next"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </button>
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.last"
      className="nav-link right-controls"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      Terra.paginator.last
    </button>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a paginator without page links - Large 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator pageless"
  >
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.previous"
      className="nav-link left-controls previous"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </button>
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.next"
      className="nav-link right-controls next"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </button>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a paginator without page links - Tiny 1`] = `
<ResponsiveElement
<<<<<<< HEAD
  medium={
    <div
      className="paginator pageless"
    >
      <PaginatorButton
        ariaDisabled={false}
        ariaLabel="Terra.paginator.previous"
        className="nav-link left-controls previous"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
        Terra.paginator.previous
      </PaginatorButton>
      <PaginatorButton
        ariaDisabled={false}
        ariaLabel="Terra.paginator.next"
        className="nav-link right-controls next"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        Terra.paginator.next
        <span
          className="icon"
        />
      </PaginatorButton>
    </div>
  }
  responsiveTo="parent"
  tiny={
    <div
      aria-label="pagination"
      className="paginator pageless"
      role="navigation"
    >
      <PaginatorButton
        ariaDisabled={false}
        ariaLabel="Terra.paginator.previous"
        className="nav-link left-controls previous icon-only"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <VisuallyHiddenText
          text="Terra.paginator.previous"
        />
        <span
          className="icon"
        />
      </PaginatorButton>
      <PaginatorButton
        ariaDisabled={false}
        ariaLabel="Terra.paginator.next"
        className="nav-link right-controls next icon-only"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <VisuallyHiddenText
          text="Terra.paginator.next"
        />
        <span
          className="icon"
        />
      </PaginatorButton>
    </div>
  }
/>
=======
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator pageless"
  >
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.previous"
      className="nav-link left-controls previous"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </button>
    <button
      aria-disabled={false}
      aria-label="Terra.paginator.next"
      className="nav-link right-controls next"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      type="button"
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </button>
  </div>
</ResponsiveElement>
>>>>>>> master
`;
